--- a/index.html
+++ b/index.html
@@ -3,53 +3,85 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ABC Partners</title>
+	<title>ABC Lawyers</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
-<body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+<body class="bg-dark">
+<!--Header with nav and logo-->
+	<nav class="navbar navbar-expand-md navbar-expand-sm navbar-dark bg-dark fixed-top">
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+			<span class="navbar-toggler-icon"></span>
+			</button>
 
-	<div class="collapse navbar-collapse" id="collapse_target">
-	<a class="navbar-brand"><img src="97.png" height="40px" width="50px"></a>
-	
+			<div class="collapse navbar-collapse" id="collapse_target" >
+			<a class="navbar-brand ml-auto"><img src="97.png" height="40px" width="50px"></a>
+			</div>
 
-	<ul class="navbar-nav mx-auto">
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target" href="#">About
-			<span class="caret"></span></a>
-			<div class="dropdown-menu" aria-labelledby="dropdown_target">
+		<ul class="navbar-nav">
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target" href="#">About
+				<span class="caret"></span></a>
+				<div class="dropdown-menu" aria-labelledby="dropdown_target">
 				<a class="dropdown-item" href="#">History</a>
 				<div class="dropdown-divider"></div>
 				<a class="dropdown-item" href="#">Our Mission</a>
 				<div class="dropdown-divider"></div>
 				<a class="dropdown-item" href="#">What we do</a>
 				<div class="dropdown-divider"></div>
-			</div>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Products</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Values</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Contacts</a>
-		</li>
-
-	</ul>
+				</div>	
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target" href="#">Cases
+				<span class="caret"></span></a>
+				<div class="dropdown-menu" aria-labelledby="dropdown_target">
+				<a class="dropdown-item" href="#">Our wins</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Our losses</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">We are your saviours</a>
+				<div class="dropdown-divider"></div>
+				</div>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target" href="#">Clients
+				<span class="caret"></span></a>
+				<div class="dropdown-menu" aria-labelledby="dropdown_target">
+				<a class="dropdown-item" href="#">Big criminals</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Small criminal</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Sharks</a>
+				<div class="dropdown-divider"></div>
+				</div>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown-target" href="#">Contacts
+				<span class="caret"></span></a>
+				<div class="dropdown-menu" aria-labelledby="dropdown_target">
+				<a class="dropdown-item" href="#">Address</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Email</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Numbers</a>
+				<div class="dropdown-divider"></div>
+				</div>
+			</li>
+		</ul>
+		
+		<div class="collapse navbar-collapse" id="collapse_target">
+		<a class="navbar-brand"><img src="97.png" height="40px" width="50px"></a>
+		</div>
+</nav>
+<div class="container-fluid mt-sm-8">
+<img class="img-fluid" src="company2.png">
 </div>
 
-</nav>
-<img src="company.png" class="img-fluid">
-
+<Footer>
 <ul class="nav justify-content-center nav-dark bg-dark fixed-bottom">
 	<li class="nav-item ">
 	  <a class="nav-link disabled" href="#">Social</a>
@@ -60,8 +92,9 @@
 	<li class="nav-item">
 	  <a class="nav-link disabled" href="#">Feedback</a>
 	</li>
-
   </ul>
+</Footer>
+  
 </body>
 </html>
 
